<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/comic_detail_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/base_margin"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/comic_detail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/comic_list_item_image_description"
                app:layout_constraintBottom_toTopOf="@id/comic_detail_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/comic_detail_title_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/comic_detail_title_text"
                app:layout_constraintBottom_toTopOf="@id/comic_detail_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_detail_image" />

            <TextView
                android:id="@+id/comic_detail_title"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base_margin"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/comic_detail_description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_detail_title_text" />

            <TextView
                android:id="@+id/comic_detail_description_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/comic_detail_description_text"
                app:layout_constraintBottom_toTopOf="@id/comic_detail_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_detail_title" />

            <TextView
                android:id="@+id/comic_detail_description"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base_margin"
                app:layout_constraintBottom_toTopOf="@id/comic_detail_page_count_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_detail_description_text" />

            <TextView
                android:id="@+id/comic_detail_page_count_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/comic_detail_page_count_text"
                app:layout_constraintBottom_toTopOf="@id/comic_detail_urls_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_detail_description" />

            <TextView
                android:id="@+id/comic_detail_page_count"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base_margin"
                app:layout_constraintBottom_toBottomOf="@id/comic_detail_page_count_text"
                app:layout_constraintStart_toEndOf="@id/comic_detail_page_count_text"
                app:layout_constraintTop_toTopOf="@id/comic_detail_page_count_text" />

            <TextView
                android:id="@+id/comic_detail_urls_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/comic_detail_urls_text"
                app:layout_constraintBottom_toTopOf="@id/comic_detail_urls_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_detail_page_count" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comic_detail_urls_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_detail_urls_text"
                tools:listitem="@layout/url_list_item" />

            <TextView
                android:id="@+id/comic_detail_characters_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/comic_detail_characters_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_detail_urls_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comic_detail_characters_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_detail_characters_text"
                tools:listitem="@layout/person_list_item" />

            <TextView
                android:id="@+id/comic_detail_creators_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/comic_detail_creators_text"
                app:layout_constraintBottom_toTopOf="@id/comic_detail_creators_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_detail_characters_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comic_detail_creators_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_detail_creators_text"
                tools:listitem="@layout/person_list_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>